[package]
name = "example"
version = "0.1.0"
authors = ["s-horii"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scheduling = { path = "../scheduling" }
futures = "0.3"
tokio = { version = "1.3.0", features = ["rt", "rt-multi-thread", "time"] }
async-stream = "0.3.0"

[[example]]
path = "./scheduler-example.rs"
name = "scheduler-example"
