[package]
name = "scheduling"
version = "0.1.0"
authors = ["s-horii"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.3.0", features = ["rt", "rt-multi-thread", "time"] }
async-stream = "0.3.0"
scheduling_internals = { path = "../scheduling_internals" }
