[package]
name = "scheduling_internals"
version = "0.1.0"
authors = ["s-horii"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.3.0", features = ["rt", "rt-multi-thread", "time"] }
async-stream = "0.3.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
lazy_static = "1.4.0"

